# grading

./:  simplenb.py  .pre-commit-config.yaml  .replit  bonzai.txt  colab_nb1.ipynb  index.html  jupytext.toml  main.py  my_first.py  notes.md  pyproject.toml  subfile.py  test_main.py  test_subfile.py  xxtest_subfile.py
markdown/: svg-admon.md
notebooks/: cars.ipynb  session2.ipynb  simplenb.ipynb  svg-admon.ipynb
scripts/: colab_nb1.py  session2.py  svg-admon.py
site/: index.html
slides/: custom.css  session.ipynb  session.slides.html  session_01.ipynb  session_01.slides.html  web.slides.html
