[tool.poetry]
name = "allfearlessgenre"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.1"
jupytext = "^1.6.0"
nbconvert = "^5.5.0"
pandas = "^1.0.0"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
